--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
     - "6.0"
-#before_install: npm install -g grunt-cli phantomjs
+before_install: npm install mocha
 install: npm install
 
 deploy:
